# web-sdk

./: .gitignore  CLAUDE.md  Cargo.toml  MIGRATION-1.0.0.md  ORBIT_TO_TINYCLOUD_MIGRATION.md  README.md  architecture.md  bun.lockb  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  turbo.json
.changeset/: activate-session-tests.md  add-tinycloud-cli.md  auth-unauthorized-errors.md  breezy-things-travel.md  chatty-pears-hope.md  clean-shoes-grow.md  clear-steaks-end.md  cli-agent-delegations.md  cli-delegate-auth.md  cli-local-auth.md  cli-secrets-manage-space.md  cli-secrets-vars-commands.md  cli-sql-duckdb-commands.md  cli-upgrade-command.md  cli-ux-improvements.md  cli-version-from-package-json.md  config.json  cool-rules-joke.md  create-node-sdk.md  create-sdk-core.md  cruel-turkeys-laugh.md  data-vault-web.md  data-vault.md  default-tee-node.md  docs-audit-fixes.md  dry-rules-count.md  duckdb-service.md  fix-build-order.md  fix-delegation-chain.md  fix-global-and-provider-shorthand.md  fix-sharing-link-bugs.md  fix-space-creation-flow.md  fix-space-not-found-race.md  fix-wasm-cjs-extension.md  fix-wasm-dependencies.md  fix-web-sdk-browser-compat.md  fluffy-steaks-beam.md  large-ties-post.md  late-cars-vanish.md  migrate-node-demo.md  (+28 more)
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
docs/: agent-secret-access.md
documentation/: .gitignore  docusaurus.config.ts  mkdocs.yml  package.json  sidebars.ts
implementations/: sdk-error-toast-notifications.md  siwe-signature-based-init.md
scripts/: build.sh  clean-docs.sh  clean.sh  npm-auth.sh  (+4 more)
(+271 files in other folders)
